<package>
  <name>lm_sensors</name>
  <version>0.1.1</version>
  <description>
      A node exporting lm_sensors values
  </description>
  <maintainer email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</maintainer>
  <license>BSD</license>

  <author email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


</package>

